some progress with core logic

--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "ui-bootstrap": "",
     "angular-animate": "",
     "weather": "~0.2.3",
-    "angular-word-cloud": "~0.1.3"
+    "angular-word-cloud": "~0.1.3",
+    "underscore": "~1.7.0"
   }
 }
