--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "angular-route": "1.2.8",
     "angular-ui-router": "0.2.11",
     "angular-animate": "1.2.8",
-    "ui-bootstrap": "0.11.2",
+    "angular-bootstrap": "0.11.2",
     "ng-resource": "",
     "weather": "~0.2.3",
     "underscore": "~1.7.0"
