--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,9 @@
     "angular-bootstrap": "0.11.2",
     "ng-resource": "",
     "weather": "~0.2.3",
-    "underscore": "~1.7.0"
+    "underscore": "~1.7.0",
+    "firebase": "1.0.21",
+    "angularfire":"0.8.2"
   },
   "resolutions": {
     "angular": "1.3.0-beta.19"
