--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "weather": "~0.2.3",
     "underscore": "~1.7.0",
     "firebase": "1.0.21",
-    "angularfire":"0.8.2"
+    "angularfire":"0.8.2",
+    "fingular": "0.2.6"
   },
   "resolutions": {
     "angular": "1.3.0-beta.19"
